Update core.css to avoid page breaks inside and after <header>s, and to disable hyphenation in <header>s.

--- a/se/data/templates/core.css
+++ b/se/data/templates/core.css
@@ -80,7 +80,10 @@ strong{
 }
 
 header{
-	page-break-inside: avoid;
+	break-after: avoid;
+	break-inside: avoid;
+	hyphens: none;
+	-epub-hyphens: none;
 	text-align: center;
 }
 
